<resources>
    <string name="app_name">Note Uni</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disciplina">Disciplina</string>
    <string name="criar_aula_professor">Professor</string>
    <string name="criar_aula_inserir_professor">Inserir nome do docente</string>
    <string name="criar_aula_turno">Turno da aula</string>
    <string name="login_validate">Validar</string>
    <string name="procurar_aula">Procurar Aula</string>

</resources>
