<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fct.miei.ipm.fragments.Eventos.Eventos">

    <TextView
        android:id="@+id/course_title"
        style="@android:style/TextAppearance.Material.Widget.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/disciplina"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/criar_aula_nome_input"
        android:background="@drawable/rounded_border_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/course_title"
        app:layout_constraintStart_toStartOf="@+id/course_title"
        app:layout_constraintTop_toBottomOf="@+id/course_title" />

    <TextView
        android:id="@+id/criar_aula_professor"
        style="@android:style/TextAppearance.Material.Widget.TextView"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/criar_aula_professor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/criar_aula_nome_input" />

    <EditText
        android:background="@drawable/rounded_border_edittext"
        android:id="@+id/criar_aula_professor_input"
        style="@android:style/Widget.Material.EditText"
        android:textAlignment="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/criar_aula_professor"
        app:layout_constraintStart_toStartOf="@+id/criar_aula_professor"
        app:layout_constraintTop_toBottomOf="@+id/criar_aula_professor" />

    <TextView
        android:id="@+id/criar_aula_turno"
        style="@android:style/TextAppearance.Material.Widget.TextView"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:text="@string/criar_aula_turno"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/criar_aula_professor_input" />

    <EditText
        android:id="@+id/criar_aula_turno_input"
        android:background="@drawable/rounded_border_edittext"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/criar_aula_turno"
        app:layout_constraintStart_toStartOf="@+id/criar_aula_turno"
        app:layout_constraintTop_toBottomOf="@+id/criar_aula_turno" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/criar_aula_turno_input">

        <RadioButton
            android:id="@+id/criar_aula_privada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Aula privada"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/criar_aula_publica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Aula pública"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/criar_aula_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_toggle_button_on"
        android:text="Criar aula"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />



</android.support.constraint.ConstraintLayout>